--- a/frontend/src/components/login/login.css
+++ b/frontend/src/components/login/login.css
@@ -7,7 +7,7 @@
 }
 
 .login__logo {
-  margin-top: 20px;
+  margin-top: 5px;
   margin-bottom: 20px;
   object-fit: contain;
   width: 100px;
@@ -26,7 +26,8 @@
 }
 
 .login__container > h1 {
-  font-weight: 500;
+  font-size: 1.75rem;
+  font-weight: 400;
   margin-bottom: 20px;
 }
 
@@ -39,21 +40,28 @@
   margin-bottom: 10px;
   background-color: white;
   width: 98%;
+  border: 1px solid rgba(150, 148, 148, 0.79);
+  border-radius: 3px;
 }
 
 .login__container > p {
   margin-top: 15px;
   font-size: 12px;
+  line-height: 1.25rem;
 }
 
 .login__signInButton {
   background: #f0c14b;
-  border-radius: 2px;
+  border-radius: 4px;
   width: 100%;
   height: 30px;
   border: 1px solid;
   margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
+}
+
+.login__signInButton:hover {
+  background: linear-gradient(to bottom, #f5d78e, #eeb933);
 }
 
 .login__registerButton {
@@ -62,5 +70,8 @@
   height: 30px;
   border: 1px solid;
   margin-top: 10px;
-  border-color: darkgray;
+}
+
+.header__link-alt {
+  color: #000;
 }
