--- a/frontend/src/components/login/login.css
+++ b/frontend/src/components/login/login.css
@@ -7,8 +7,8 @@
 }
 
 .login__logo {
-  margin-top: 5px;
-  margin-bottom: 20px;
+  margin-top: 0.25rem;
+  margin-bottom: 1.5rem;
   object-fit: contain;
   width: 100px;
   margin-right: auto;
@@ -21,18 +21,18 @@
   display: flex;
   flex-direction: column;
   border-radius: 5px;
-  border: 1px solid lightgray;
-  padding: 20px;
+  border: 0.05rem solid lightgray;
+  padding: 1.75rem;
 }
 
 .login__container > h1 {
   font-size: 1.75rem;
   font-weight: 400;
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
 }
 
 .login__container > form > h5 {
-  margin-bottom: 5px;
+  margin-bottom: 0.5rem;
 }
 
 .login__container > form > input {
@@ -45,7 +45,7 @@
 }
 
 .login__container > p {
-  margin-top: 15px;
+  margin-top: 1.05rem;
   font-size: 12px;
   line-height: 1.25rem;
 }
@@ -54,9 +54,9 @@
   background: #f0c14b;
   border-radius: 4px;
   width: 100%;
-  height: 30px;
+  height: 2rem;
   border: 1px solid;
-  margin-top: 10px;
+  margin-top: 0.75rem;
   border-color: #a88734 #9c7e31 #846a29;
 }
 
@@ -67,9 +67,9 @@
 .login__registerButton {
   border-radius: 2px;
   width: 100%;
-  height: 30px;
+  height: 2rem;
   border: 1px solid;
-  margin-top: 10px;
+  margin-top: 0.75rem;
 }
 
 .header__link-alt {
