--- a/frontend/src/components/sitewide/alt-footer/alt-footer.css
+++ b/frontend/src/components/sitewide/alt-footer/alt-footer.css
@@ -1,21 +1,21 @@
 .alt-footer {
   width: 100%;
-  margin-top: 3rem;
+  margin-top: 1.5rem;
 }
 
 .divider {
-  height: 70px;
+  height: 60px;
   margin-bottom: -53px;
   background: -webkit-linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.34),
+    rgba(0, 0, 0, 0.24),
     rgba(0, 0, 0, 0.03) 3px,
     transparent
   );
 
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.34),
+    rgba(0, 0, 0, 0.24),
     rgba(0, 0, 0, 0.03) 3px,
     transparent
   );
@@ -45,10 +45,11 @@
   padding: 1rem;
   text-decoration: none;
   color: #0066c0;
-  font-size: 0.75rem;
+  font-size: 0.65rem;
 }
 
 .alt-footer__copyright {
   text-align: center;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
+  color: rgb(73, 72, 72);
 }
