--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,31 @@
-*{
+* {
   margin: 0;
 }
 
 body {
-  background-color: rgb(234,237,237);
+  background-color: rgb(234, 237, 237);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* normal default links */
+.alink-normal {
+  display: block;
+  text-decoration: none;
+  color: #007185;
+  margin-bottom: 0.5rem;
+}
+.alink-normal:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  color: #c7511f;
 }
