--- a/frontend/src/components/checkout/product/product.css
+++ b/frontend/src/components/checkout/product/product.css
@@ -3,21 +3,32 @@
   margin-top: 20px;
   margin-bottom: 20px;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #ddd;
 }
 
 .checkoutProduct__info {
   padding-left: 20px;
+  width: 100%;
 }
 
 .checkoutProduct__info > button {
-  background: #f0c14b;
-  border:1px solid;
+  /* background: #f0c14b;
+  border: 1px solid;
   margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
-  color: #111;
+  color: #111; */
 }
-
+.a-color-link {
+  color: #007185;
+  margin-bottom: 0.5rem;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+.seperator {
+  font-size: 0.75rem;
+  color: #efefef;
+}
 .checkoutProduct__image {
   object-fit: contain;
   width: 180px;
@@ -28,7 +39,10 @@
 }
 
 .checkoutProduct__title {
-  font-size: 17px;
-  font-weight: 800;
+  font-size: 1.4rem;
+  font-weight: 400;
 }
-
+.checkoutProduct__top {
+  display: flex;
+  justify-content: space-between;
+}
