--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,11 @@ code {
     monospace;
 }
 
+.color-success {
+  color: #007600;
+  font-size: 0.85rem;
+}
+
 /* normal default links */
 .alink-normal {
   display: block;
