--- a/frontend/src/components/checkout/cart/cart.css
+++ b/frontend/src/components/checkout/cart/cart.css
@@ -2,6 +2,7 @@
   background-color: #fff;
   display: grid;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 @media only screen and (min-width: 768px) {
