--- a/frontend/src/components/checkout/checkout.css
+++ b/frontend/src/components/checkout/checkout.css
@@ -8,10 +8,19 @@
 }
 @media only screen and (min-width: 768px) {
   .checkout {
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 2fr 1fr;
   }
 }
-
+@media only screen and (min-width: 1200px) {
+  .checkout {
+    grid-template-columns: 3fr 1fr;
+  }
+}
+@media only screen and (min-width: 1600px) {
+  .checkout {
+    grid-template-columns: 5fr 1fr;
+  }
+}
 .checkout__ad {
   width: 100%;
   margin-bottom: 10px;
@@ -25,4 +34,27 @@
   margin-right: 10px;
   padding: 10px;
   border-bottom: 1px solid lightgray;
+}
+.checkout__subtotal {
+  box-sizing: border-box;
+  margin: 1rem 0;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 3px;
+  height: max-content;
+}
+
+@media only screen and (min-width: 768px) {
+  .checkout__subtotal {
+    margin: 0 1rem;
+  }
+}
+
+.subtotal__gift {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.75rem;
+}
+.subtotal__gift > input {
+  margin-right: 5px;
 }
