--- a/frontend/src/components/checkout/checkout.css
+++ b/frontend/src/components/checkout/checkout.css
@@ -1,6 +1,5 @@
 .checkout {
   display: flex;
-
   height: max-content;
   display: grid;
   grid-template-columns: 1fr;
@@ -8,7 +7,7 @@
 @media only screen and (min-width: 768px) {
   .checkout {
     grid-template-columns: 2fr 1fr;
-    padding: 20px;
+    padding: 1.25rem;
   }
 }
 @media only screen and (min-width: 1200px) {
