--- a/frontend/src/components/shared/product-list/browsering-history.css
+++ b/frontend/src/components/shared/product-list/browsering-history.css
@@ -1,11 +1,14 @@
 .browsering__items__container {
-  width: 100%;
+  /* width: 100%; */
   /* margin-bottom: 2rem; */
 }
 
 .browsering__items__row {
   padding: 1rem 1rem 2rem 1rem;
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
 }
 
 .browsering__items-title {
@@ -19,6 +22,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: baseline;
 }
 .browsering__items-description {
   width: 200px;
@@ -49,7 +53,7 @@
   margin-bottom: 2rem;
 }
 .browsering__items-product img {
-  max-width: 220px;
+  max-width: 125px;
   max-height: 150px;
   object-fit: contain;
   margin-bottom: 1rem;
@@ -65,7 +69,7 @@
   .browsering__items-product {
     width: auto;
     margin-right: 1rem;
-    max-width: 230px;
+    max-width: 200px;
     flex-direction: column;
     justify-content: end;
     align-items: center;
