--- a/frontend/src/components/shared/product-list/browsering-history.css
+++ b/frontend/src/components/shared/product-list/browsering-history.css
@@ -4,11 +4,12 @@
 }
 
 .browsering__items__row {
-  padding: 1rem 1rem 2rem 1rem;
+  padding: 1rem 1rem 0rem 1rem;
   background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: baseline;
+  border-bottom: 1px solid #ddd;
 }
 
 .browsering__items-title {
