--- a/frontend/src/components/home/sub-cards/sub-cards.css
+++ b/frontend/src/components/home/sub-cards/sub-cards.css
@@ -21,7 +21,9 @@
   column-gap: 1rem;
 }
 .sub__card-img {
-  width: 100%;
+  width: 186px;
+  height: 116px;
+  object-fit: contain;
 }
 .sub__card-title {
   font-size: 0.75rem;
