--- a/frontend/src/routes/products/products.css
+++ b/frontend/src/routes/products/products.css
@@ -1,53 +1,85 @@
-.form-navigation {
+.product__container {
   background-color: #fff;
-  padding: 1rem;
+}
+
+.list-card__product {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  border-top: 1px solid #888c8c;
+  border-bottom: 1px solid #888c8c;
+  padding: 1rem 0.5rem;
+}
+
+.list-card__image {
+  height: 300px;
+  width: 100%;
+  object-fit: contain;
+}
+.list-card__content {
+  padding: 0 1rem;
+}
+
+.list-card__heading {
+  font-weight: 400;
+  font-size: 1.15rem;
   color: #0f1111;
+  margin-bottom: 0.5rem;
+}
+
+.list-card__stars {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+.list-card__pricing {
+  margin-bottom: 0.5rem;
+}
+
+.list-card__price {
+  font-size: 1.25rem;
+  color: #0f1111;
+}
+
+.list-card__currency,
+.list-card__fraction {
   font-size: 0.85rem;
-  border-right: 2px solid #ddd;
-  max-width: 250px;
+  position: relative;
+  top: -4px;
 }
-.form-navigation__group {
-  padding: 0.5rem 0;
+.list-card__old-price {
+  margin-left: 0.25rem;
+  color: #565959;
+  font-size: 0.85rem;
 }
-.form-navigation__prime {
+.offscreen {
+  position: absolute !important;
+  left: 0 !important;
+  bottom: -1px !important;
+  z-index: -1 !important;
+  opacity: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.prime-delivery {
   display: flex;
   align-items: center;
-  padding: 0.5rem 0;
+  margin-bottom: 0.5rem;
 }
-.form-navigation__prime > * {
-  margin-right: 0.5rem;
+.prime-delivery img {
+  margin-right: 0.25rem;
 }
-
-.form-navigation__text {
-  padding: 0.25rem 0;
-}
-.form-navigation__text > * {
-  margin-bottom: 0.25rem;
+.prime-delivery span {
+  font-size: 0.8rem;
 }
 
-.input-price {
-  width: 40px;
-  margin-right: 0.75rem;
-  margin-left: -0.8rem;
-  padding: 0.5rem 0.95rem;
-  border: 1px solid #888c8c;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(15, 17, 17, 0.15) inset;
+.size-base {
+  font-size: 0.95rem;
 }
-.input-price::placeholder {
-  padding: 0.5rem;
+.text-secondary {
+  color: #565959;
 }
-.currency {
-  z-index: 5;
-  position: relative;
-}
-
-.go {
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px 0 rgba(213, 217, 217, 0.5);
-  border-color: #d5d9d9;
-  border-style: solid;
-  border-width: 1px;
-  padding: 0.5rem 0.75rem;
+.text-bold {
+  font-weight: bold;
 }
