linked all products to a single product via route

--- a/frontend/src/routes/products/products.css
+++ b/frontend/src/routes/products/products.css
@@ -99,3 +99,16 @@
 .text-bold {
   font-weight: bold;
 }
+
+.text-base {
+  color: #0f1111;
+}
+.alink-none {
+  text-decoration: none;
+}
+.alink-none:hover {
+  text-decoration: none;
+}
+.alink-none:active {
+  color: #0f1111;
+}
