refactor: search page component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -122,3 +122,43 @@ code {
 .reset-list {
   padding: 0;
 }
+
+/* Accessibility */
+.offscreen {
+  position: absolute !important;
+  left: 0 !important;
+  bottom: -1px !important;
+  z-index: -1 !important;
+  opacity: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.size-base {
+  font-size: 0.9rem;
+}
+.text-secondary {
+  color: #565959;
+}
+.text-bold {
+  font-weight: bold;
+}
+
+.text-base {
+  color: #0f1111;
+}
+.alink-none {
+  text-decoration: none;
+}
+.alink-none:hover {
+  text-decoration: none;
+}
+.alink-none:active {
+  color: #0f1111;
+}
