developed basic order page

--- a/frontend/src/components/orders/order/order.css
+++ b/frontend/src/components/orders/order/order.css
@@ -1,10 +1,10 @@
-.order {
+/* .order {
   padding: 40px;
   margin: 20px 0;
   border: 1px solid lightgray;
   background-color: white;
   position: relative;
-}
+} */
 
 .order__id {
   position: absolute;
