--- a/frontend/src/components/checkout/cart/your-items/your-items.css
+++ b/frontend/src/components/checkout/cart/your-items/your-items.css
@@ -6,7 +6,7 @@
 .customer-items__heading {
   margin-bottom: 1rem;
 }
-
+/* 
 .btn-group {
   border-bottom: 1px solid #ddd;
   padding-left: 0.75rem;
@@ -24,4 +24,4 @@
 .btn-tab--active {
   border-bottom: 3px solid #e47911;
   color: #000;
-}
+} */
