--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -4,6 +4,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1500px;
+  background-color: rgb(234, 237, 237);
 }
 .home__container {
   overflow: hidden;
