--- a/frontend/src/components/orders/orders.css
+++ b/frontend/src/components/orders/orders.css
@@ -3,11 +3,50 @@
 }
 
 .order__container-heading {
-  padding: 0 0 1rem 0;
+  padding: 0 1rem 1rem 1rem;
+  display: grid;
+}
+.order__container-heading h1 {
+  /* margin-bottom: 0.5rem; */
+}
+
+.order__container-form input {
+  margin-top: 0.5rem;
+  margin-right: 0.5rem;
+  padding: 0.5rem;
+}
+.order__container-form button {
+  background: #444c55;
+  border-color: #3d444c #2f353b #2c3137;
+  border-style: solid;
+  border-radius: 3px;
+  border-width: 1px;
+  color: #fff;
+  background: linear-gradient(to bottom, #72787f, #444c55);
+  padding: 0.4rem 0.5rem;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  margin-top: 0.5rem;
+}
+
+@media only screen and (min-width: 900px) {
+  .order__container-form input {
+    margin-top: 0;
+  }
+  .order__container-heading {
+    padding: 0 0 1rem 0;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 .pagination {
-  padding: 1rem 0;
+  padding: 1rem;
 }
+
+@media only screen and (min-width: 900px) {
+  .pagination {
+    padding: 1rem 0;
+  }
+}
+
 .pagination li {
   margin-right: 0.5rem;
 }
@@ -16,6 +55,19 @@
   border: 1px #ddd solid;
   border-radius: 4px 4px 0 0;
   padding: 1rem;
+  flex-direction: column;
+}
+
+@media only screen and (min-width: 900px) {
+  .order__heading {
+    flex-direction: row;
+  }
+}
+
+.order__content-container,
+.order__heading,
+.order__footer {
+  margin: 0 1rem;
 }
 .orders > h1 {
   margin: 30px 0;
@@ -44,32 +96,51 @@
   color: #000;
   font-weight: 700;
 }
-.order__container-form input {
-  margin-right: 0.5rem;
-  padding: 0.5rem;
-}
-.order__container-form button {
-  background: #444c55;
-  border-color: #3d444c #2f353b #2c3137;
-  border-style: solid;
-  border-radius: 3px;
-  border-width: 1px;
-  color: #fff;
-  background: linear-gradient(to bottom, #72787f, #444c55);
-  padding: 0.4rem 0.5rem;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
+
 .order__container-overview {
-  padding: 1rem 0;
+  padding: 1rem;
 }
+@media only screen and (min-width: 900px) {
+  .order__container-overview {
+    padding: 1rem 0;
+  }
+
+  .order__content-container,
+  .order__heading,
+  .order__footer {
+    margin: 0;
+  }
+}
+
 .order__container-overview select {
-  margin-left: 0.5rem;
+  margin-top: 0.5rem;
 }
-.order__content {
+.order__content-container {
   border-left: 1px #ddd solid;
   border-right: 1px #ddd solid;
   padding: 1rem;
   border-bottom: 1px #ddd solid;
+}
+
+.product-item,
+.order-responsive,
+.order__content {
+  flex-direction: column;
+}
+
+@media only screen and (min-width: 900px) {
+  .order-responsive {
+    flex-direction: row;
+  }
+  .order__container-overview select {
+    margin-left: 0.5rem;
+    margin-top: 0;
+  }
+  .product-item,
+  .order-responsive,
+  .order__content {
+    flex-direction: row;
+  }
 }
 
 .btn-basic {
@@ -118,4 +189,10 @@
 
 .grid-space {
   padding: 0 2rem 0 0;
+  margin-bottom: 0.5rem;
+}
+
+.btn__content {
+  border-top: 1px #ddd solid;
+  padding-top: 1rem;
 }
