implement stripe payment in the front end with error logic

--- a/frontend/src/components/payment/payment.css
+++ b/frontend/src/components/payment/payment.css
@@ -201,6 +201,12 @@
   padding: 1rem;
 }
 
+.buynow__btn:disabled {
+  background: #dddddd;
+  color: #dddddd;
+  display: none;
+}
+
 .content {
   flex: 1;
   font-size: 0.85rem;
