--- a/frontend/src/components/shared/product-list/browsering-history.css
+++ b/frontend/src/components/shared/product-list/browsering-history.css
@@ -53,7 +53,7 @@
 
   margin-bottom: 2rem;
 }
-.browsering__items-product img {
+.browsering__items-image {
   max-width: 125px;
   max-height: 150px;
   object-fit: contain;
